--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       - checkout
       - run: |
             echo "export AWS_ACCESS_KEY_ID=aaaa"  >> $BASH_ENV
+
+            source $BASH_ENV # Adding source to read the env vars
+
             if [ -z "${AWS_ACCESS_KEY_ID}" ]; then
                   echo "no val"
                   exit 1
